Fix some usability issues on mobile

--- a/css-dev/burf-base/_config.scss
+++ b/css-dev/burf-base/_config.scss
@@ -139,6 +139,20 @@ $margin-large:                              $margin * 2;
 
 $padding:                                   30px;
 
+/// The base padding to use for content sitewide.
+/// @group config
+/// @access public
+/// @since 2.0.0
+
+$padding-small:                              $padding / 2;
+
+/// The base padding to use for large spacing sitewide.
+/// @group config
+/// @access public
+/// @since 2.0.0
+
+$padding-large:                              $padding * 2;
+
 // -----------------------------------------------------------------
 // -----------------------------------------------------------------
 // -----------------------------------------------------------------
